--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@iconify/svelte": "^3.1.0",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
@@ -34,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"firebase": "^9.17.1",
-		"pocketbase": "^0.10.1"
+		"pocketbase": "^0.10.1",
+		"saos": "^1.3.1"
 	}
 }
