--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@supabase/supabase-js": "^2.10.0",
 		"firebase": "^9.17.1",
+		"moment": "^2.29.4",
 		"pocketbase": "^0.10.1",
-		"saos": "^1.3.1"
+		"saos": "^1.3.1",
+		"supabase": "^1.42.5"
 	}
 }
