--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,17 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
-	}
-	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
-	//
-	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
-	// from the referenced tsconfig.json - TypeScript does not merge them in
+		"strict": true,
+		"outDir": "./built" // Specify the output directory for compiled JavaScript files
+	},
+	"include": [
+		"./src/**/*",
+		"./.svelte-kit/**/*" // Copy any relevant include patterns from ./.svelte-kit/tsconfig.json
+	],
+	"exclude": [
+		"./node_modules/**/*",
+		"./.svelte-kit/output/**/*", // Copy any relevant exclude patterns from ./.svelte-kit/tsconfig.json
+		"./build/**/*" // Exclude the output directory from the inputs
+	]
+	// Path aliases are handled by https://kit.svelte.dev/docs
 }
